Fix form textarea resizing bug, reduce About text size so it looks good on mobile.

--- a/static/stylesheets/css/styles.css
+++ b/static/stylesheets/css/styles.css
@@ -91,6 +91,8 @@ label {
 
 .about-text {
   margin-bottom: 40px; }
+  .about-text p {
+    font-size: 18px; }
 
 .main {
   height: 100%;
@@ -164,12 +166,13 @@ body .login-no-shadow {
 
 .form-control, .form-control:focus {
   padding: 10px;
-  height: 3em !important;
+  min-height: 3em !important;
   border-style: solid;
   border-width: 1px !important;
   border-color: #C5CBD2 !important;
   border-radius: 3px !important;
-  margin-bottom: 25px; }
+  margin-bottom: 25px;
+  resize: vertical; }
 
 .show-hide-password {
   float: right;
